config/deployments/webhooks/clusterBomAdmissionHookConfig.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: clusterbomadmission.hub.k8s.sap.com
webhooks:
  - name: "clusterbomadmission.hub.k8s.sap.com"
    admissionReviewVersions: ["v1beta1"]
    sideEffects: "None"
    clientConfig:
      # caBundle needed for local setup with self signed certificate
      # caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURsVENDQW4yZ0F3SUJBZ0lVZitJd0hreVdHK0VSa3ZrZEd4aTV0aDJiKy9nd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1NERUxNQWtHQTFVRUJoTUNWVk14RmpBVUJnTlZCQWdURFZOaGJpQkdjbUZ1WTJselkyOHhDekFKQmdOVgpCQWNUQWtOQk1SUXdFZ1lEVlFRREV3dGxlR0Z0Y0d4bExtNWxkREFlRncweU1EQXhNakl4TXpNNE1EQmFGdzB5Ck5UQXhNakF4TXpNNE1EQmFNRWd4Q3pBSkJnTlZCQVlUQWxWVE1SWXdGQVlEVlFRSUV3MVRZVzRnUm5KaGJtTnAKYzJOdk1Rc3dDUVlEVlFRSEV3SkRRVEVVTUJJR0ExVUVBeE1MWlhoaGJYQnNaUzV1WlhRd2dnRWlNQTBHQ1NxRwpTSWIzRFFFQk [...]
      # url schema for local dev setup
      # url: "https://192.168.126.134:8000/checkClusterBom"
      # url example "https://hub.ingress.cont.hubforplay.shoot.canary.k8s-hana.ondemand.com/checkClusterBom"
      url: "TO_BE_REPLACED"
    failurePolicy: Fail
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["hub.k8s.sap.com"]
        apiVersions: ["v1"]
        resources: ["clusterboms"]
        scope: "*"
