config/deployments/webhooks/secretAdmissionHookConfig.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: secretadmission.hub.k8s.sap.com
webhooks:
  - admissionReviewVersions: ["v1beta1"]
    clientConfig:
      url: https://hub.<ingress domain of hub controller cluster>/checkSecret
    failurePolicy: Fail
    matchPolicy: Exact
    name: secretadmission.hub.k8s.sap.com
    namespaceSelector: {}
    objectSelector:
      matchLabels:
        hub.k8s.sap.com/purpose: secret-values
    reinvocationPolicy: Never
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["DELETE", "UPDATE"]
        resources: ["secrets"]
        scope: '*'
    sideEffects: None
    timeoutSeconds: 30
